--- a/src/app/shaker-game/shaker-game.component.html
+++ b/src/app/shaker-game/shaker-game.component.html
@@ -30,7 +30,7 @@
             <p style="font-size: 12px; line-height: 15px;">Euer Handy ist euer Werkzeug.</p>
             <p style="font-size: 12px; line-height: 15px;">Schüttelt das Handy, um die Objekte zu schütteln.</p>
             <img src="assets/shaker/hit.gif" alt="screen" style="padding: 10px;">
-            <p style="font-size: 12px; line-height: 15px;">Je mehr ihr alle gemeinsam schüttelt, desto mehr Früchte fallen von den Bäumen.</p>
+            <p style="font-size: 12px; line-height: 15px;">Je mehr ihr alle gemeinsam schüttelt, desto mehr Früchte fallen!</p>
             <div class="myButton" style="text-align: center;" (click)="endTutorial()">
                 <p style="margin: 0px; font-size: 16px;">Alles klar!</p>
             </div>
@@ -40,7 +40,7 @@
             <p style="font-size: 12px; line-height: 15px;">Euer Handy ist euer Werkzeug.</p>
             <p style="font-size: 12px; line-height: 15px;">Schüttelt das Handy, um die Objekte zu schütteln.</p>
             <img src="assets/shaker/move.gif" alt="screen" style="padding: 10px;">
-            <p style="font-size: 12px; line-height: 15px;">Je mehr ihr alle gemeinsam schüttelt, desto mehr Früchte fallen von den Bäumen.</p>
+            <p style="font-size: 12px; line-height: 15px;">Je mehr ihr alle gemeinsam schüttelt, desto mehr Früchte fallen!</p>
             <div class="myButton" style="text-align: center;" (click)="endTutorial()">
                 <p style="margin: 0px; font-size: 16px;">Alles klar!</p>
             </div>
