--- a/src/app/shaker-game/shaker-game.component.html
+++ b/src/app/shaker-game/shaker-game.component.html
@@ -17,16 +17,29 @@
 <div *ngIf="tutorial" style="color: white; margin-top: 50px;">
     <ion-slides #slides [options]="slideOptions">
         <ion-slide style="padding: 10px;">
-            <p style="text-decoration: underline;">Ziel</p>
-            <p style="font-size: 12px; line-height: 15px;">Schüttelt die Bäume und Pflanzen, um Zutaten zu sammeln.</p>
-            <p style="font-size: 12px; line-height: 15px;">Sammelt nur Zutaten, die ihr braucht.</p>
-            <p style="font-size: 12px; line-height: 15px;">Los geht's!</p>
-            <img src="assets/shaker/screen.png" alt="screen" style="padding: 10px;">
+            <p style="text-decoration: underline;">Schütteln!</p>
+            <p style="font-size: 12px; line-height: 15px;">In diesem Spiel musst du dein Handy schütteln.</p>
+            <!-- <p style="font-size: 12px; line-height: 15px;">Sammelt nur Zutaten, die ihr braucht.</p> -->
+            <!-- <p style="font-size: 12px; line-height: 15px;">Los geht's!</p> -->
+            <img src="assets/shaker/shake-phone.gif" alt="screen" style="padding: 10px;">
             <div class="myButton" style="text-align: center;" (click)="slides.slideNext()">
                 <p style="margin: 0px; font-size: 16px;">Weiter</p>
             </div>
         </ion-slide>
-        <ion-slide *ngIf="moving" style="padding: 10px;">
+        <ion-slide style="padding: 10px;">
+            <p style="text-decoration: underline;">Früchte sammeln</p>
+            <!-- <p style="font-size: 12px; line-height: 15px;">Wenn du fest schüttelst, fallen Früchte von den Bäumen.</p> -->
+            <p style="font-size: 12px; line-height: 15px;">Je mehr ihr schüttelt, desto mehr Früchte fallen.</p>
+            <p style="font-size: 12px; line-height: 15px;">Mehr Früchte, mehr Saft. Wie viele Becher schafft ihr?</p>
+
+            <!-- <p style="font-size: 12px; line-height: 15px;">Je mehr ihr alle gemeinsam schüttelt, desto mehr Früchte fallen!</p> -->
+            <img src="assets/shaker/screen.png" alt="screen" style="padding: 10px;">
+            <p style="font-size: 12px; line-height: 15px;">Aber Achtung: Sammelt nur die Früchte, die auf der Liste stehen!</p>
+            <div class="myButton" style="text-align: center;" (click)="endTutorial()">
+                <p style="margin: 0px; font-size: 16px;">Los geht's!</p>
+            </div>
+        </ion-slide>
+        <!-- <ion-slide *ngIf="!moving" style="padding: 10px;">
             <p style="text-decoration: underline;">Wie?</p>
             <p style="font-size: 12px; line-height: 15px;">Euer Handy ist euer Werkzeug.</p>
             <p style="font-size: 12px; line-height: 15px;">Schüttelt das Handy, um die Objekte zu schütteln.</p>
@@ -35,17 +48,7 @@
             <div class="myButton" style="text-align: center;" (click)="endTutorial()">
                 <p style="margin: 0px; font-size: 16px;">Alles klar!</p>
             </div>
-        </ion-slide>
-        <ion-slide *ngIf="!moving" style="padding: 10px;">
-            <p style="text-decoration: underline;">Wie?</p>
-            <p style="font-size: 12px; line-height: 15px;">Euer Handy ist euer Werkzeug.</p>
-            <p style="font-size: 12px; line-height: 15px;">Schüttelt das Handy, um die Objekte zu schütteln.</p>
-            <img src="assets/shaker/hit.gif" alt="screen" style="padding: 10px;">
-            <p style="font-size: 12px; line-height: 15px;">Je mehr ihr alle gemeinsam schüttelt, desto mehr Früchte fallen!</p>
-            <div class="myButton" style="text-align: center;" (click)="endTutorial()">
-                <p style="margin: 0px; font-size: 16px;">Alles klar!</p>
-            </div>
-        </ion-slide>
+        </ion-slide> -->
         <!-- <ion-slide *ngIf="!moving" style="padding: 10px;">
             <p style="text-decoration: underline;">Wie?</p>
             <p style="font-size: 12px; line-height: 15px;">Euer Handy ist euer Werkzeug.</p>
