--- a/src/app/not-in-lobby/not-in-lobby.component.html
+++ b/src/app/not-in-lobby/not-in-lobby.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="!socketService.isConnected()" style="padding-top: 100px">
     <div id="connecting-box">
         <div style="margin-top: 50px">
-            <span>Connecting to service</span>
+            <span>Verbindet</span>
             <span *ngIf="dots == 3">...</span>
             <span *ngIf="dots == 2">..&nbsp;</span>
             <span *ngIf="dots == 1">.&nbsp;&nbsp;</span>
@@ -16,12 +16,12 @@
   
     <div style="text-align: center; width: 100%; margin-top: 20px">
       <div class="myButton" (click)="joinLobby(joinLobbyCode.value)">
-        <p style="margin: 0px">Join</p>
+        <p style="margin: 0px">Bestätigen</p>
       </div>
     </div>
 
-    <div style="text-align: center; width: 100%; margin-top: 50px">
+    <!-- <div style="text-align: center; width: 100%; margin-top: 50px">
       <p style="margin: 20px; color: white">Go to https://src-fhnw.xyz on a computer to create a lobby.</p>
-    </div>
+    </div> -->
   </div>
   
