add catcher game, restructure

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,7 @@
   <app-spaceship-game *ngIf="program === Program.SPACESHIP"></app-spaceship-game>
   <app-whack-a-mole-game *ngIf="program === Program.WHACK_A_MOLE"></app-whack-a-mole-game>
   <app-shaker-game *ngIf="program === Program.SHAKER"></app-shaker-game>
+  <app-catcher-game *ngIf="program === Program.CATCHER"></app-catcher-game>
   <app-varianz-test *ngIf="program === Program.VARIANZ_TEST || program === Program.LAST_TEST"></app-varianz-test>
 
   <app-no-displays-error></app-no-displays-error>
