add device motion sensor, detect rotation of device (left, right)

--- a/src/app/catcher-game/catcher-game.component.html
+++ b/src/app/catcher-game/catcher-game.component.html
@@ -5,7 +5,7 @@
     <button style="margin-top: 20px;" (click)="right()">Rechts</button>
 </div>
 
-<img src="assets/shaker/shake-phone.gif" alt="screen" style="padding: 10px; margin-top: 40%;" *ngIf="playing && !moving">
+<img src="assets/shaker/shake-phone.gif" alt="screen" style="padding: 10px; margin-top: 40%;" *ngIf="playing">
 
 
 <div *ngIf="tutorial" style="color: white; margin-top: 0px;">
