tutorial adjustment, show colored nets according to controllerId

--- a/src/app/catcher-game/catcher-game.component.html
+++ b/src/app/catcher-game/catcher-game.component.html
@@ -5,7 +5,11 @@
     <button style="margin-left: 100px; text-align: right;"(click)="quitGame()">Abbrechen</button> 
 </div>
 
-<img src="assets/catcher/net.png" alt="screen" style="padding: 10px; margin-top: 40%;" *ngIf="playing">
+<div *ngIf="playing">
+    <img *ngIf="controllerNumber==1" src="assets/catcher/NetOrange.png" alt="Oranges Netz bewegen" style="padding: 10px; margin-top: 40%;">
+    <img *ngIf="controllerNumber==2" src="assets/catcher/NetLightGreen.png" alt="Grünes Netz bewegen" style="padding: 10px; margin-top: 40%;">
+    <img *ngIf="controllerNumber==undefined" src="assets/catcher/net.png" alt="Netz bewegen" style="padding: 10px; margin-top: 40%;">
+</div>
 
 
 <div *ngIf="tutorial" style="color: white; margin-top: 0px;">
@@ -14,15 +18,15 @@
         <ion-slide style="padding: 5px;">
             <p style="font-size: 35px;">Links & Rechts</p>
             <p>In diesem Spiel musst du dein Handy nach links...</p>
-            <img src="assets/catcher/turnLeft.png" alt="screen" style="padding: 10px; height: 200px;">
+            <img src="assets/catcher/turnLeft.png" alt="Links" style="padding: 10px; height: 200px;">
             <div class="myButton" style="text-align: center;" (click)="slides.slideNext()">
                 <p style="margin: 0px;">Weiter</p>
             </div>
         </ion-slide>
         <ion-slide style="padding: 5px;">
             <p style="font-size: 35px;">Links & Rechts</p>
-            <p>... und rechts bewegen.</p>
-            <img src="assets/catcher/turnRight.png" alt="screen" style="padding: 10px; height: 200px;">
+            <p>... und rechts halten. So bewegst du dein Netz...</p>
+            <img src="assets/catcher/turnRight.png" alt="Rechts" style="padding: 10px; height: 200px;">
             <div class="myButton" style="text-align: center;" (click)="slides.slideNext()">
                 <p style="margin: 0px;">Weiter</p>
             </div>
@@ -30,7 +34,11 @@
         <ion-slide style="padding: 5px;">
             <p style="font-size: 35px;">Früchte auffangen</p>
             <p style="font-size: 20px;">Fangt die fallenden Früchte auf. So viele wie möglich!</p>
-            <img src="assets/catcher/net.png" alt="screen" style="padding: 5px; height: 200px;">
+
+            <img *ngIf="controllerNumber==1" src="assets/catcher/NetOrange.png" alt="Oranges Netz bewegen" style="padding: 5px; height: 200px;">
+            <img *ngIf="controllerNumber==2" src="assets/catcher/NetLightGreen.png" alt="Grünes Netz bewegen" style="padding: 5px; height: 200px;">
+            <img *ngIf="controllerNumber==undefined" src="assets/catcher/net.png" alt="Netz bewegen" style="padding: 5px; height: 200px;">
+            
             <div class="myButton" style="text-align: center;" (click)="slides.slideNext()">
                 <p style="margin: 0px;">Weiter</p>
             </div>
@@ -48,7 +56,7 @@
 </div>
 
 <div *ngIf="!tutorial && !playing && !played" style="color: white; text-align: center; margin-top: 100px; padding: 20px;">
-    <span>Warte, bis alle das Tutorial abgeschlossen haben</span>
+    <span>Warte</span>
     <span *ngIf="dots == 3">...</span>
     <span *ngIf="dots == 2">..&nbsp;</span>
     <span *ngIf="dots == 1">.&nbsp;&nbsp;</span>
