adapt catcher tutorial

--- a/src/app/catcher-game/catcher-game.component.html
+++ b/src/app/catcher-game/catcher-game.component.html
@@ -53,8 +53,8 @@
             </div>
         </ion-slide>
         <ion-slide style="padding: 5px;">
-            <p style="font-size: 40px;">Aber Achtung!</p>
-            <p style="font-size: 20px;">Fangt nur die Früchte, die auf der Liste stehen!</p>
+            <p style="font-size: 35px;">Aber Achtung!</p>
+            <p style="font-size: 20px;">Fange nur die Früchte, die auf der Liste stehen!</p>
             <img src="assets/catcher/ingredient-list.jpg" alt="Liste" style="padding: 5px; height: 200px;">
             <!-- <p style="font-size: 20px;">Wie viele Becher Saft schafft ihr?</p> -->
             <div class="myButton" style="text-align: center;" (click)="slides.slideNext()">
@@ -69,6 +69,7 @@
                 <img *ngIf="controllerNumber==2" src="assets/catcher/NetLightGreen.png" alt="Grünes Netz bewegen" style="padding: 5px; height: 200px;">
                 <img *ngIf="controllerNumber==undefined" src="assets/catcher/net.png" alt="Netz bewegen" style="padding: 5px; height: 200px;">
             </div>
+            <p style="font-size: 20px;">Ihr spielt gemeinsam als Team!</p>
             <div class="myButton" style="text-align: center;" (click)="slides.slideNext()">
                 <p style="margin: 0px;">Weiter</p>
             </div>
