colored background according to player, quit button for spielleiter, no dashed lines, skip button more present

--- a/src/app/main-menu/main-menu.component.html
+++ b/src/app/main-menu/main-menu.component.html
@@ -1,13 +1,13 @@
 <!-- Only displayed if controller is main-controller -->
 <div *ngIf="mainController" style="text-align: center;">
   <div style="margin-top: 100px;" (click)="pressedUp()">
-    <img src="assets/main-menu/top.png" alt="top" style="height: 60px; border: 3px dashed white; padding: 10px;">
+    <img src="assets/main-menu/top.png" alt="top" style="height: 60px; border: 3px solid white; padding: 10px;">
   </div>
   <div class="myButton" style="margin-top: 50px; margin-bottom: 50px" (click)="pressedEnter()">
     <p style="margin: 0px;">Play</p>
   </div>
   <div (click)="pressedDown()">
-    <img src="assets/main-menu/down.png" alt="down" style="height: 60px; border: 3px dashed white; padding: 10px;">
+    <img src="assets/main-menu/down.png" alt="down" style="height: 60px; border: 3px solid white; padding: 10px;">
   </div>
 </div>
 <!-- Only displayed if controller is not main-controller -->
