--- a/src/app/not-in-lobby/not-in-lobby.component.scss
+++ b/src/app/not-in-lobby/not-in-lobby.component.scss
@@ -2,7 +2,7 @@
     padding:8px;
     display:block;
     border:none;
-    border-bottom:2px dashed white;
+    border-bottom:2px solid white;
     width:100%;
     background: transparent;
     color: white;
@@ -22,14 +22,14 @@
     color: white;
     width: 200px;
     height: 40px;
-    border: 3px dashed white;
+    border: 3px solid white;
     line-height: 40px;
     margin: auto
   }
   
   .myButton:hover {
     color: #69f0ae;
-    border: 3px dashed #69f0ae;
+    border: 3px solid #69f0ae;
     cursor: pointer;
   }
   
@@ -39,6 +39,6 @@
   
   
   .game-code-input:hover {
-    border-bottom:2px dashed #69f0ae;
+    border-bottom:2px solid #69f0ae;
   }
   
