--- a/src/app/catcher-game/catcher-game.component.html
+++ b/src/app/catcher-game/catcher-game.component.html
@@ -1,19 +1,22 @@
-<div *ngIf="devControls && playing">
-    <button style="margin-top: 20px;" (click)="left()">Links</button>
-    <button style="margin-top: 20px;" (click)="center()">Mitte</button>
-    <button style="margin-top: 20px;" (click)="right()">Rechts</button>
-    <button style="margin-left: 100px; text-align: right;"(click)="quitGame()">Abbrechen</button> 
+<div *ngIf="playing">
+    <div *ngIf="devControls">
+        <button style="margin-top: 20px;" (click)="left()">Links</button>
+        <button style="margin-top: 20px;" (click)="center()">Mitte</button>
+        <button style="margin-top: 20px;" (click)="right()">Rechts</button>
+    </div>
+    <button *ngIf="devControls || controllerNumber==1" style="margin-left: 200px; text-align: right;"(click)="quitGame()">Abbrechen</button> 
+    <div style="display: flex; align-items: center; justify-content: center; background-color: #F38C2C" *ngIf="controllerNumber==1">
+        <img *ngIf="controllerNumber==1" src="assets/catcher/NetOrange.png" alt="Oranges Netz bewegen" style="padding: 50px; margin-top: 50%;">
+    </div>
+    <div style="display: flex; align-items: center; justify-content: center; height: 100%; background-color: #4CAF50" *ngIf="controllerNumber==2">
+        <img *ngIf="controllerNumber==2" src="assets/catcher/NetLightGreen.png" alt="Grünes Netz bewegen" style="padding: 50px; margin-top: 50%;">
+    </div>
+    <div style="display: flex; align-items: center; justify-content: center; height: 100%" *ngIf="controllerNumber==undefined">
+        <img *ngIf="controllerNumber==undefined" src="assets/catcher/net.png" alt="Netz bewegen" style="padding: 50px; margin-top: 50%;">
+    </div>
 </div>
-
-<div style="display: flex; align-items: center; justify-content: center;" *ngIf="playing">
-    <img *ngIf="controllerNumber==1" src="assets/catcher/NetOrange.png" alt="Oranges Netz bewegen" style="padding: 10px; margin-top: 40%;">
-    <img *ngIf="controllerNumber==2" src="assets/catcher/NetLightGreen.png" alt="Grünes Netz bewegen" style="padding: 10px; margin-top: 40%;">
-    <img *ngIf="controllerNumber==undefined" src="assets/catcher/net.png" alt="Netz bewegen" style="padding: 10px; margin-top: 40%;">
-</div>
-
 
 <div *ngIf="tutorial" style="color: white; margin-top: 0px;">
-    <button style="margin-top: 5px;" (click)="endTutorial()">Überspringen</button>
     <ion-slides #slides [options]="slideOptions">
         <ion-slide style="padding: 5px;">
             <p style="font-size: 35px;">Handy wie Fernbedienung</p>
@@ -64,7 +67,7 @@
         <ion-slide style="padding: 5px;">
             <p style="font-size: 35px;">Farbe deines Netzes</p>
             <p>Dein Netz hat diese Farbe:</p>
-            <div style="display: flex; align-items: center; justify-content: center;">
+            <div style="display: flex; align-items: center; justify-content: center">
                 <img *ngIf="controllerNumber==1" src="assets/catcher/NetOrange.png" alt="Oranges Netz bewegen" style="padding: 5px; height: 200px;">
                 <img *ngIf="controllerNumber==2" src="assets/catcher/NetLightGreen.png" alt="Grünes Netz bewegen" style="padding: 5px; height: 200px;">
                 <img *ngIf="controllerNumber==undefined" src="assets/catcher/net.png" alt="Netz bewegen" style="padding: 5px; height: 200px;">
@@ -82,8 +85,11 @@
             <div class="myButton" style="text-align: center;" (click)="endTutorial()">
                 <p style="margin: 0px;">Los geht's!</p>
             </div>
-        </ion-slide>
+        </ion-slide>   
     </ion-slides>
+    <button style="position:absolute; margin-left: 150px; text-align: center; font-size: 28px; padding: 5px" (click)="endTutorial()">
+        Überspringen
+    </button>
 </div>
 
 <div *ngIf="!tutorial && !playing && !played" style="color: white; text-align: center; margin-top: 100px; padding: 20px;">
