--- a/src/app/catcher-game/catcher-game.component.scss
+++ b/src/app/catcher-game/catcher-game.component.scss
@@ -23,7 +23,7 @@ ion-slides {
     color: white;
     width: 196px;
     height: 40px;
-    border: 3px dashed white;
+    border: 3px solid white;
     line-height: 40px;
     margin: auto
   }
