--- a/src/app/main-menu/main-menu.component.scss
+++ b/src/app/main-menu/main-menu.component.scss
@@ -2,7 +2,7 @@
     color: white;
     width: 196px;
     height: 40px;
-    border: 3px dashed white;
+    border: 3px solid white;
     line-height: 40px;
     margin: auto
   }
