--- a/src/app/modals/game-running/game-running.component.html
+++ b/src/app/modals/game-running/game-running.component.html
@@ -1,4 +1,6 @@
 <ngx-smart-modal #gameRunningError identifier="gameRunningError">
-  <h1>Game is already running</h1>
-  <p>Wait until the lobby is in the main menu.</p>
+  <!-- <h1>Game is already running</h1>
+  <p>Wait until the lobby is in the main menu.</p> -->
+  <h1>Spiel läuft gerade</h1>
+  <p>Warte, bis das Spiel beendet ist.</p>
 </ngx-smart-modal>
