--- a/src/app/modals/lobby-full/lobby-full.component.html
+++ b/src/app/modals/lobby-full/lobby-full.component.html
@@ -1,4 +1,6 @@
 <ngx-smart-modal #fullLobbyError identifier="fullLobbyError">
-  <h1>Lobby full</h1>
-  <p>There are already two active controllers in the lobby.</p>
+  <!-- <h1>Lobby full</h1>
+  <p>There are already two active controllers in the lobby.</p> -->
+  <h1>Kein Platz mehr</h1>
+  <p>Es sind bereits 2 Spieler verbunden.</p>
 </ngx-smart-modal>
