--- a/src/app/modals/no-displays-error/no-displays-error.component.html
+++ b/src/app/modals/no-displays-error/no-displays-error.component.html
@@ -1,4 +1,6 @@
 <ngx-smart-modal #noDisplayError identifier="noDisplayError">
-  <h1>Lobby closed</h1>
-  <p>There is no display connected to the lobby anymore. The Lobby has been closed.</p>
+  <!-- <h1>Lobby closed</h1>
+  <p>There is no display connected to the lobby anymore. The Lobby has been closed.</p> -->
+  <h1>Spielplattform geschlossen</h1>
+  <p>Der Bildschirm mit der Spielanzeige ist nicht mehr verbunden.</p>
 </ngx-smart-modal>
