--- a/src/app/modals/wrong-lobby-code/wrong-lobby-code.component.html
+++ b/src/app/modals/wrong-lobby-code/wrong-lobby-code.component.html
@@ -1,4 +1,6 @@
 <ngx-smart-modal #wrongLobbyError identifier="wrongLobbyError">
-  <h1>Wrong game code</h1>
-  <p>This game code does not exist.</p>
+  <!-- <h1>Wrong game code</h1>
+  <p>This game code does not exist.</p> -->
+  <h1>Falscher Game Code</h1>
+  <p>Dieser Game Gode existiert nicht.</p>
 </ngx-smart-modal>
