--- a/src/app/main-menu/main-menu.component.html
+++ b/src/app/main-menu/main-menu.component.html
@@ -4,7 +4,7 @@
     <img src="assets/main-menu/top.png" alt="top" style="height: 60px; border: 3px solid white; padding: 10px;">
   </div>
   <div class="myButton" style="margin-top: 50px; margin-bottom: 50px" (click)="pressedEnter()">
-    <p style="margin: 0px;">Play</p>
+    <p style="margin: 0px;">Bestätigen</p>
   </div>
   <div (click)="pressedDown()">
     <img src="assets/main-menu/down.png" alt="down" style="height: 60px; border: 3px solid white; padding: 10px;">
